@@ -9,18 +9,20 @@ AUX i2pd.initd 612 SHA256 a424b1f4f2e1beed23f8d7fb191eed71998e5a09156079cd569ff1
 AUX i2pd.logrotate 270 SHA256 cac89d98a0c2eff2eeedb323b3b81c3e316293f80d3397bfeb833f700e98b691 SHA512 08a944576f3f103ef7206e5e09ad7256f79254097d389b955271db9a8e3781332d9ac564cef06a7bb6c3837324abee3035cb18588470f43861310e886c4f7075 WHIRLPOOL 79096ea93a446240d84bc65930e0746f8fae203303d9309a1a345a1818c11525d782f51dd7200f55d5f1c79b79a7d43c9d1a510225aa5bdf522baf4884a45700
 AUX i2pd.service 412 SHA256 afc2b4a72e3bec2c45a838971375a1e8a438bc9cb09a082f138583e226ee8402 SHA512 99ec3dbe7c983d732c483207f49a9b9456c83c17b76605f663fb177142e09e11e0e3fe4e10ffaaca3b9e08519a055ab5efee4117b6e977d22ec80c6aa7c3d3eb WHIRLPOOL dc47e828a8a457e16e16ff5dae50c73fdeaa6a79d36d2f2d4e44919e06e222a2b14d0677c77ef2d471107d8ce669ad499172656f3985bee18697f2725df2e95e
 DIST i2pd-0.5.0.tar.gz 352460 SHA256 7f2033fe1c380c458722d68f611d0fa69a844ceba71db13a918adac6e01a0594 SHA512 08c51dc5fa3712af54b7dcc9f4524fb19d7b42a279646c7852efdf1fd49cf4ea24192c936229954c3733ba4bcbc480205bcfeca739ffae3642f5c62bd24e0cf6 WHIRLPOOL 1812a8733f17cd6b9885cf8af3ad0412f238356121118d46fbed53cb826aaa6c878a045adb69e0a692fd5cd3fc720192c635f4e594d3d42efb2116f14bbba9e9
+DIST i2pd-0.6.0.tar.gz 360829 SHA256 149a8c2d870ebc3988aea06eec906c9e968b3d89ae282bd3b2b5ead205f7c3b7 SHA512 084c75c5f972dbc07740119c3ae1711924cf740391703a95752164eab7a04d6cea0cfb302530e1e1bebafb54f9eed552e747479ae55fb053e824cdf059ab3266 WHIRLPOOL a858a49173755e052f31a95f4f7075965dac0c89943a7dc05c3c88d51b646ab86a7510a9533e33d9c5f0e7736e9f702f6fd0de4e6a841cc3ec57ea5aaf2b991c
 EBUILD i2pd-0.5.0.ebuild 1845 SHA256 d359c5eae64a9421cb831938eee3d4d8a484cd872169b40c0b93bda40b7b2420 SHA512 f2844531b16a4be3609bda365326354d3ecae205434bffe4eaa2e5b4177f723e97be2ae1d222bb9a28d6e40c015dea09071bccc7b2a7faa9ceb23009b32b6cdb WHIRLPOOL e1d8c5c591479d80f5912a7d5bf0e17b1b0f0323260506862a03000d345aaded6bc9172e5cecdc24a9a3804316175a81665f1a18724431ca4c6074d7ae2a900f
-EBUILD i2pd-9999.ebuild 2131 SHA256 1c49076a53ba83162873d660fa0982891b3a3e7608a5cf575cb113c5acc31046 SHA512 96e90f10e1110138eb897af17c13d2e18a70145d40fdd81b9f2e5a454daab47dce59a6c05cd5a5a03ac2a17618a13f4946788acee75e9a1649ad680847ffa97d WHIRLPOOL fe7594f28f4208faad9d38d537dbb81149d69d0e67f7d5f04572a29c2a82a5dc76a3729e0298230e9b7c128acd58698746ac0e1490836dd6a174ecf1c5cbccac
-MISC ChangeLog 1136 SHA256 5ba63b4f909dddc0cbe5e3a7cd7b33d7eb1e4fb0b9b9d403b381e0d272e5e3f5 SHA512 8b548e20c7f17ee0607ae39669cacc19dbb783b53af733409d640c542cbc52a16b509903f9303ca8424688a321cd176713783afe63ce8849f8ad36d314ea1e23 WHIRLPOOL 4bf7ca4344008d70eb638318e939fe4da1e638d2dd4db826a989fdb09b5c6fd4798b750f094c55701ee9e19c47d030901bd18a7a41dcd41c118af98fa36e4645
+EBUILD i2pd-0.6.0.ebuild 2329 SHA256 5c80e418d8ed074afffc7b917e339abfad64f46dcf3f5b2d59fd46d05e563728 SHA512 e5d28ba5200fe2a6d37422ee8c68482aa6cd021e82ce75bbe5325d122796b06e477221a0e991c31e7a3b17b43705a015cab3bb4e5a0ab072bf1ed6a8093e9207 WHIRLPOOL 129850acf9c38a368757e0b664e0199ccf14ce5bce44870b98cdadb349bf3c35dd5a7e53ffef8298939bfb0d84a3376bec96f9fa80214b87d95560bf5e9acbbe
+EBUILD i2pd-9999.ebuild 2313 SHA256 c0e1c345d04eb3052f43a419c25222f25aa673435c213215ec181817c60dfa2b SHA512 664a1b9e573919898406a1cda8ab1b9d4e166b47ebd253a4605ce5bef984f34b8f352c8849c1b700954b5e16c87eaf9a8f3e40834badbb5b36a805b5b106fc12 WHIRLPOOL c021c2a6bbd3962765741120c149a59074a0e3509202f22e186edae37705d93f4739dab53b2d9fd410ed8e81596cc447a87d6439e9ac75e4bb2f3537fe3b7a4e
+MISC ChangeLog 1358 SHA256 1c766dee2c42bf48e33b84020ff082e441edd2dcac820b20736899d6c8e35815 SHA512 32cf651b799621d741715766a65d2aac11920b47f4f1cfea912a41da12d5abf4120da580f1e73ab0dbf974041b5826d27c033884ba860ea1268c710e4fd20c8e WHIRLPOOL 6d22af71c8d057743bbe181435777e2508fc8873f87e7ae4198d90a2ad1d20b5c61f6b256ae008d7e07ff083b63b3956048e6bbb4a1ec779462832bda99213e2
 MISC metadata.xml 505 SHA256 94805fb4a94ff250fb81c585d9088f9575b6cef36b717bee72a566fe7a9d13aa SHA512 c4ff8b6c0535316934c77fd3c5249481a4c2a619a4f743b7f7784ff25e1b2839690239581c1d92b4176d4369c4f6a5a488f206c3ed6cc0433843e08b1f2c20f5 WHIRLPOOL 8231dfd31bdbc80c375f3efc8f190c10bd208c553e070ae3181bcf3d7e0760b540877a90f347080c43984c6a6a3815e91f5e211972058b444869b43b82c7e710
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQEcBAEBCAAGBQJUpE8eAAoJEKXBodJLEo5SA5kH/1WwEEKSXb+yoBEAKVxiA+bo
-GgieS2/2xgAcEbfIuS1yKJDS/8CcsMjude1SmN785PeKHWKMpG0PekB1E/guwRyz
-aEnTXLWIH15WN2ljc+G4ilO/komplJyLGpgYqjRF98m/rF5n30aKwfjeZjiPlbGM
-QQ2Vidx0T/kCSMrmr40br83hyARRwv/x8w4vmtpxpUzZeZSOsJVufvqlQF8VM0t7
-cVH3ADtDw9d6TibwCGEZ9yZikkW4S+IcjqyEx4TYryIYzJWfDohOSbKHmRur/Lpb
-4/UxJesN4OsSFTy6Nq4PS2Ok9Stfx6SFAwXU/+wl5HgF7SzxDdkf0bWAtdzdFxs=
-=lUQm
+iQEcBAEBCAAGBQJUq+4IAAoJEKXBodJLEo5SZFYIAJAVh519Lmm0CbWfsq4i0IZ1
+NimACx1GBJ6r4C0XGurb3gVkQMgfLpfNMI46A/ljTy9nukll9pdGGaPYvz86V3GE
+o/x5goR/At/iHdNjbWkAyeWoLZZt97hljZEbsGd2K7BmYwJXxYkjrBWkOx69olia
+6VLSqsY5mFanAl3oZI2mtJ33f8Nd2c2eseLJBbeBJXhzJgLjJdqzfftfrtDF9VeY
+R8lDn/k+xtD7l1xfnzZnubo+r/dYlAe/Jp3GYM9Hg8+PbZ6CeQWQQGvpncUiUWC/
+Z03FGj5TpHsntzqS7E7uWZgYuulWRhzazCekTXjxeka0FWmXsy5/jamouCsh0G8=
+=STmh
 -----END PGP SIGNATURE-----
